--- a/Build_Mate_fe/package.json
+++ b/Build_Mate_fe/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
     "@babel/preset-env": "^7.24.4",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -11,18 +12,21 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.6",
-    "firebase": "^9.20.0",
+    "firebase": "^10.12.2",
     "install": "^0.13.0",
     "jwt-decode": "^3.1.2",
     "npm": "^10.7.0",
     "react": "^18.2.0",
+    "react-chat-engine": "^1.11.28",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.24.0",
     "react-scripts": "^5.0.1",
     "react-scroll-trigger": "^0.6.14",
     "styled-components": "^6.1.11",
-    "web-vitals": "^2.1.4"
+    "sweetalert2": "^11.12.1",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.92.1"
   },
   "scripts": {
     "start": "react-scripts start",
