--- a/Build_Mate_fe/package.json
+++ b/Build_Mate_fe/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
     "@babel/preset-env": "^7.24.4",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -16,12 +17,14 @@
     "jwt-decode": "^3.1.2",
     "npm": "^10.7.0",
     "react": "^18.2.0",
+    "react-chat-engine": "^1.11.28",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "react-scroll-trigger": "^0.6.14",
     "styled-components": "^6.1.11",
+    "sweetalert2": "^11.12.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
