--- a/Build_Mate_fe/package.json
+++ b/Build_Mate_fe/package.json
@@ -1,50 +1,37 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@ant-design/icons": "^5.3.7",
-    "@babel/preset-env": "^7.24.4",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.17",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "animate.css": "^4.1.1",
-    "axios": "^1.3.6",
-    "emoji-picker-react": "^4.11.1",
-    "firebase": "^9.23.0",
-    "framer-motion": "^11.2.13",
-    "install": "^0.13.0",
-    "jwt-decode": "^3.1.2",
-    "npm": "^10.7.0",
-    "react": "^18.2.0",
-    "react-chat-engine": "^1.11.28",
-    "react-countup": "^6.5.3",
-    "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.10.3",
-    "react-router-dom": "^6.22.3",
-    "react-scripts": "^5.0.1",
-    "react-scroll-trigger": "^0.6.14",
-    "react-toastify": "^10.0.5",
-    "styled-components": "^6.1.11",
-    "sweetalert2": "^11.12.1",
-    "swiper": "^11.1.7",
-    "web-vitals": "^2.1.4",
-    "zustand": "^4.5.4"
-  },
+  "name": "build_mate_fe",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "author": "",
+  "license": "ISC",
+  "private": true,
+  "dependencies": {
+    "@ant-design/icons": "^5.4.0",
+    "animate.css": "^4.1.1",
+    "axios": "^1.7.2",
+    "emoji-picker-react": "^4.11.1",
+    "firebase": "^10.12.4",
+    "react": "^18.3.1",
+    "react-chat-engine": "^1.11.28",
+    "react-countup": "^6.5.3",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
+    "react-scripts": "^5.0.1",
+    "react-scroll-trigger": "^0.6.14",
+    "react-toastify": "^10.0.5",
+    "sweetalert2": "^11.12.3",
+    "web-vitals": "^4.2.2",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
+    "zustand": "^4.5.4"
   },
   "browserslist": {
     "production": [
